# RuneSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc  runesim.h  test.cc
app/: client.cc  cmd.cc  operation.cc  operation.h  runesim.h  server.cc  view.cc  view.h
card/: card.cc  card.h  gallery.cc  gallery.h  ionia_spell.cc  noxus_spell.cc
common/: common.h  error.cc  error.h  result.h  type.h  util.cc  util.h
data/: prepare.sh
doc/: DEV.md
game/: card_wrapper.cc  card_wrapper.h  event.cc  event.h  event_type.h  game.cc  game.h  object.cc  object.h  player.cc  player.h
legacy/: .gitignore  README.md
legacy/meta/: analyzer.py  gen_cardset01.py  gen_initiator.py  set1-en_us.json  set2-en_us.json
legacy/misc/: RuneSim.xml
legacy/src/base/: error.cc  error.h  rsvec.h  util.cc  util.h
legacy/src/cardset/: cardset02.cc  gallery.cc  gallery.h
legacy/src/game/: action.cc  action.h  card.h  entity.h  event.h  event_listener.cc  event_listener.h  frontier.h  game.h  game_state.h  lor_deck_codes.h  player.cc
legacy/test/: main.cc  test_base.cc
meta/: analyzer.py  gen_cardset.py  gen_cardset01.py  gen_cardset02.py  gen_gallery.py  gen_keyword_macro.py  gen_keywords.py  prepare.sh
misc/: RuneSim.xml
src/: runesim.h
src/app/: cmd.cc
src/base/: base.h  error.cc  error.h  result.cc  result.h  rsvec.h  type.h  util.cc  util.h
src/cardset/: cardset01.cc  cardset01.h  gallery.cc  gallery.h  initiator.h  ionia_spells.cc  noxus_others.cc  noxus_spells.cc  noxus_units.cc  shadow_isles_units.cc
src/game/: action.cc  action.h  card.cc  card.h  entity.cc  entity.h  event.cc  event.h  event_listener.cc  event_listener.h  frontier.h  game.cc  game.h  game_state.h  lor_deck_codes.h  player.cc
test/: json.hpp  main.cc  test.h  test_base.cc  test_deck.cc  test_deck_check.cc  test_event_listener.cc  test_game_component.cc  test_game_init.cc  test_game_workflow.cc
